fix alignment

--- a/Lesson04/css/Preston-4.css
+++ b/Lesson04/css/Preston-4.css
@@ -27,7 +27,8 @@ header {
 
 footer {
     color: white;
-    display: grid fr fr fr; 
+    display: grid; 
+    grid-template-columns: fr fr fr;
 }
 
 /*Logo*/
